...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="or8-08-bjs" customClass="DesignableButton" customModule="Spring">
                                        <rect key="frame" x="20" y="494" width="560" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="Us3-ZU-4NJ"/>
                                        </constraints>
                                        <state key="normal" title="List of Locations"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="animation" value="pop"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="curve" value="spring"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="duration">
                                                <real key="value" value="1.5"/>
                                            </userDefinedRuntimeAttribute>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FA1-NW-Wf7" customClass="DesignableButton" customModule="Spring">
                                        <rect key="frame" x="20" y="547" width="560" height="45"/>
                                        <color key="backgroundColor" red="0.89803921568627454" green="0.9137254901960784" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="erO-2M-z3D"/>
                                        </constraints>
                                        <state key="normal" title="Map of Locations">
                                            <color key="titleColor" red="0.32549019607843138" green="0.32549019607843138" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
...
                            <constraint firstAttribute="bottom" secondItem="ioM-WJ-rTP" secondAttribute="bottom" id="dDt-s3-1Mk"/>
                            <constraint firstItem="ioM-WJ-rTP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="uUB-Hy-gUO"/>
                            <constraint firstAttribute="trailing" secondItem="ioM-WJ-rTP" secondAttribute="trailing" id="vEA-D6-u2B"/>
                            <constraint firstItem="ioM-WJ-rTP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wqO-v1-aCf"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Immunization Locations" id="lTW-Mt-SUm">
                        <barButtonItem key="backBarButtonItem" title=" " id="Pfp-nY-f1H"/>
                        <barButtonItem key="leftBarButtonItem" image="back" id="lse-I2-qIh">
                            <connections>
                                <segue destination="RqH-3E-kZg" kind="unwind" unwindAction="unwindToLandingSegue:" id="InJ-Yr-qOM"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="settings" id="iEL-f1-SRy">
                            <connections>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IwX-TR-5Pn">
                                                <rect key="frame" x="0.0" y="450" width="545" height="45"/>
                                                <color key="backgroundColor" red="0.18823529411764706" green="0.6470588235294118" blue="0.85490196078431369" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="OZ0-AW-moZ"/>
                                                </constraints>
                                                <state key="normal" title="OK">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="popViewController:" destination="I0K-BF-wTq" eventType="touchUpInside" id="8SW-jn-VAZ"/>
                                                </connections>
                                            </button>
...
